demo page added

--- a/angular/index.html
+++ b/angular/index.html
@@ -3,9 +3,8 @@
 <script src="angular.min.js"></script>
 <body>
 
-<div ng-app="">
-  <p>Name : <input type="text" ng-model="name"></p>
-  <h1>Hello {{name}}</h1>
+<div >
+ 
 </div>
 
 </body>
