--- a/html/sample2.html
+++ b/html/sample2.html
@@ -3,17 +3,17 @@
 <body style="background-color:whitesmoke";>
 <div id="hello">
 <img style="width:120px;margin-top:20px;"src="https://www.google.co.in/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"/>
-<h2 style="height:12px;">Sign in</h2>
-to continue to G-mail
-<br><br><br>
+<h2 style="height:12px;font-weight:900px;">Sign in</h2>
+to continue to Gmail
 
-<form >
+
+<form style="margin-top: 52px;" >
 Username:<br>
-<input type="text" name="Username">
-<br><br>
-Password:<br>
+<input type="text" placeholder="eg. sahilanand14" name="Username"><br>
+
+<p style="margin-top:15px;margin-bottom: -14px;">Password:</p><br>
 <input type="password"  name="Password">
-<br><p style="color:blue";>forget password?</p><br><br>
+<p style="color:blue";>forget password?</p>
 <input type="button" value="NEXT">
 </form>
 
