--- a/html/demo2.html
+++ b/html/demo2.html
@@ -7,8 +7,10 @@
 
 
    <div id="parent">
-      <div id="child1"></div>
-       <div id="child2"></div>
+      <div class="child"></div>
+       <div class="child"></div>
+        <div class="child"></div>
+         <div class="child"></div>
    </div>
 </body>
 </html>
