--- a/html/finedu/finedu page.html
+++ b/html/finedu/finedu page.html
@@ -4,20 +4,23 @@
 	<link rel="stylesheet" type="text/css" href="finedu.css">
 </head>
 <body>
+    <div>
 
 	<div id="banner">
 		<div id="header">
              <div id="logo"><b>FIN</b>EDU</div>
+             
                  <div id="menu-bar">
-                    <div class="menu-bar-options">HOME</div>
-                    <div class="menu-bar-options">WHO WE ARE</div>
-                    <div class="menu-bar-options">WHY FINEDU?</div>
-                    <div class="menu-bar-options">B-SCHOOL</div>
-                    <div class="menu-bar-options">TEAM</div>
-                    <div class="menu-bar-options">PRODUCT</div>
-                    <div class="menu-bar-options">PEOPLE SAY</div>
-                    <div class="menu-bar-options">CONTACT</div>
+                    <div class="menu-bar-options"><span id="a">HOME</span></div>
+                    <div class="menu-bar-options"><span id="a">WHO WE ARE</span></div>
+                    <div class="menu-bar-options"><span id="a">WHY FINEDU?</span></div>
+                    <div class="menu-bar-options"><span id="a">B-SCHOOL</span></div>
+                    <div class="menu-bar-options"><span id="a">TEAM</span></div>
+                    <div class="menu-bar-options"><span id="a">PRODUCT</span></div>
+                    <div class="menu-bar-options"><span id="a">PEOPLE SAY</span></div>
+                    <div class="menu-bar-options"><span id="a">CONTACT</span></div>
              </div>
+             <div style="clear:both;"></div>
 		</div>
         <div id="banner-footer">Spreading Financial Awareness Across Country</div>
     </div>
@@ -29,6 +32,7 @@
     		    			<h4>ABOUT US</h4><p>Bringing in a world-class manufacturing facility to India with a state of the art production lines from Germany with a capacity of 450MW. Our goal is to ensure consistent product improvement and a close working relationship with installers and developers.
                              </p>	
     		        </div>
+                    <div style="clear:both;"></div>
     </div>
 
     <div id="USP">
@@ -37,6 +41,7 @@
     				<p>Actually purchasing a cellphone for an employee is just the first expense in an ongoing stream of costs that will likely accrue going forward. Give the issue some careful thought before you take the leap. Here's a list of considerations to keep in mind as you determine whether the benefit of the cellphone will outweigh the cost.</p>
     		</div>
     		        <div id="USP-image"><img height="250px" width=100% src="photos/laptop.jpg"></div>
+                    <div style="clear:both;"></div>
      </div>
 
     <div id="finedu-at-schools">
@@ -49,6 +54,7 @@
 
                My school has one big library, principal office, head office, clerk office, one science laboratory, one computer lab, one common study room, one big lobby, teacher common room, one big sports ground, separate hostel for girls and boys in the school campus. My school has highly qualified and experienced teachers who teach us in very effective and creative manner. My school has around one thousand students who always rank higher in the competitions held outside the school or inside the school. We all go to school in the proper uniform. We have two types of the uniform, one common uniform and other house uniform.</p>
            </div>
+           <div style="clear:both;"></div>
 
     </div>
 
@@ -67,9 +73,9 @@
    				<div id="member-name2">Vineeta Sharma</div>
     	   </div>
 
-
+            <div style="clear:both;"></div>
     </div>
-
+  
 <div>
     <div id="feedback">
 
@@ -98,8 +104,6 @@
 
     </div>
     </div>
-
-    
-
+</div>
 </body>
 </html>
